Add GraphQL ToDo schema

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -4,5 +4,14 @@
 			"service": "S3AndCloudFront",
 			"providerPlugin": "awscloudformation"
 		}
+	},
+	"api": {
+		"appsyncDemo": {
+			"service": "AppSync",
+			"providerPlugin": "awscloudformation",
+			"output": {
+				"securityType": "API_KEY"
+			}
+		}
 	}
 }
